Cambios primer entrega, actividades, informes por quincena, faltan detalles a pulir

--- a/software/web/Login/login.html
+++ b/software/web/Login/login.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Chevron/volver -->
   <div class="chevron-inicio">
-  <a href="/inicio" title="Ir a inicio" class="chevron-link chevron-row">
+  <a href="/actividades" title="Ir a inicio" class="chevron-link chevron-row">
     <span class="chevron-text">Ir a inicio</span>
     <svg width="32" height="32" viewBox="0 0 24 24" fill="none" aria-hidden="true">
       <path d="M9 6l6 6-6 6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
